# wheel-metadata-injector

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: pre-commit.yml  release_python.yml  tests.yml
common/: Cargo.toml
common/src/: lib.rs
examples/: setup.py
python/wheel_metadata_injector/: __init__.py  cli.py  setuptools_plugin.py
scanner/: Cargo.toml  README.md  packages.json  test.sh
scanner/src/: main.rs  zip_utils.rs
scanner/tests/: README.md  test_scanner_with_example.rs
src/: lib.rs  main.rs
tests/: README.md
tests/e2e/: test_python_api.py  test_setuptools_plugin.py
wheel-metadata-injector/: Cargo.toml  justfile
wheel-metadata-injector/.github/workflows/: tests.yml
wheel-metadata-injector/examples/: README.md  pyproject.toml  setup.py
wheel-metadata-injector/python/wheel_metadata_injector/: __init__.py  setuptools_plugin.py
wheel-metadata-injector/src/: lib.rs  main.rs
wheel-metadata-injector/tests/e2e/: conftest.py  test_cli.py  test_python_api.py  test_setuptools_plugin.py
