[package]
name = "wheel-metadata-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

google-cloud-storage = "0.24"
google-cloud-auth = "0.19"

zip = "0.6"

futures = "0.3"
bytes = "1.5"
async-trait = "0.1"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "fmt"]}
reqwest = { version = "0.11", features = ["json", "stream"] }

common = { path = "../common" }
toml = { version = "0.8.22", features = ["indexmap"] }
cel-interpreter = { version = "0.9.1", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
