[package]
name = "wheel-metadata-injector"
version = "0.0.1"
edition = "2024"

[lib]
name = "wheel_metadata_injector"
crate-type = ["cdylib"]

[dependencies]
clap = "4.5.37"
hex = "0.4.3"
sha2 = "0.10.8"
tempfile = "3.19.1"
zip = "2.6.1"
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3"] }
